fixed page cut off

--- a/UJBUZZ/stylem.css
+++ b/UJBUZZ/stylem.css
@@ -15,7 +15,7 @@ body {
 
 .flipbook {
     width: 360px;
-    height: 540px; 
+    height: 510px; 
     max-width: 100vw;
     max-height: 100vh;
 }
